--- a/css/style_carrito.css
+++ b/css/style_carrito.css
@@ -24,7 +24,6 @@
   margin-right: 10px;
 }
 
-
 /* Enlaces activos o destacados */
 .nav-link.active,
 .nav-link:hover {
@@ -38,7 +37,7 @@ body {
 }
 
 .carrito-container {
-  max-width: 700px;
+  max-width: 600px;
   margin: 40px auto;
   background: #fff;
   padding: 30px;
@@ -51,7 +50,7 @@ body {
 h1 {
   text-align: center;
   color: var(--azul-profundo);
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .producto {
@@ -136,7 +135,6 @@ footer p {
   color: #555;
 }
 
-
 .cantidad-elegante {
   display: inline-flex;
   align-items: center;
@@ -165,6 +163,97 @@ footer p {
   text-align: center;
   font-weight: 500;
   color: black;
+}
+
+/*Diseño Responsive*/
+
+/* Dispositivos hasta 768px */
+@media (max-width: 768px) {
+  .carrito-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
+  .carrito-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    width: 65%;
+  }
+
+  .producto {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .producto img {
+    margin: 15px;
+  }
+
+  .total {
+    text-align: right;
+    margin: 30px 20px;
+  }
+
+  .boton-pago {
+    text-align: center;
+    padding: 15px 20px;
+  }
+
+  .navbar-brand {
+    margin-left: 60px;
+    justify-content: left;
+  }
+}
+
+/* Dispositivos hasta 450px */
+@media (max-width: 450px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  .producto img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .info h3 {
+    font-size: 16px;
+  }
+
+  .precio-unitario,
+  .precio-total {
+    font-size: 14px;
+  }
+
+  .btn-cantidad {
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+  }
+
+  .valor-cantidad {
+    font-size: 16px;
+  }
+
+  .navbar-brand {
+    font-size: 16px;
+    margin-left: 5px;
+    justify-content: left;
+  }
+
+  .total {
+    text-align: center;
+    margin: 30px 20px;
+  }
+
+  .boton-pago {
+    text-align: center;
+    padding: 15px 20px;
+  }
 }
 
 
