--- a/css/style_producto.css
+++ b/css/style_producto.css
@@ -1,22 +1,15 @@
 :root {
   --celeste: #00AEEF;
+  --celeste-claro: #4fc7ec;
   --azul-profundo: #0098d3;
   --verde-suave: #61c286;
 }
 
-html, body {
-  height: 100%;
+body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
   background-color: var(--verde-suave);
   color: #333;
-}
-
-main {
-  min-height: calc(100vh - 160px); /* ajusta según altura navbar + footer */
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .navbar {
@@ -41,16 +34,15 @@ main {
 
 .detalle-container {
   display: flex;
-  gap: 40px;
   flex-wrap: wrap;
-  padding: 30px;
-  max-width: 900px;
-  margin: 40px auto;
+  gap: 30px;
+  padding: 20px 30px;
+  max-width: 800px;
+  margin: 30px auto 20px auto;
   background: #fff;
-  border-radius: 20px;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.2);
-  align-items: center;
-  justify-content: center;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  align-items: flex-start;
 }
 
 .galeria {
@@ -171,41 +163,32 @@ main {
   font-size: 14px;
 }
 
-.carrito-navbar {
-  position: absolute;
-  right: 40px;
-  top: 15px;
-}
-.carrito-icono {
-  position: relative;
-  font-size: 22px;
-  color: var(--celeste);
-  text-decoration: none;
+/* BOTÓN VER CATÁLOGO */
+.boton-volver {
+  margin-top: 20px;
 }
 
-#contadorCarrito {
-  position: absolute;
-  top: -8px;
-  right: -12px;
-  background-color: var(--celeste);
+.btn-volver {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: var(--celeste-claro);
   color: white;
-  font-size: 12px;
+  text-decoration: none;
+  border-radius: 8px;
   font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
+  transition: background-color 0.3s ease;
 }
 
+.btn-volver:hover {
+  background-color: var(--celeste);
+}
 
-/* Responsive */
+/* RESPONSIVE */
 @media (max-width: 768px) {
-  main {
-    padding: 20px;
-  }
-
   .detalle-container {
     flex-direction: column;
     padding: 20px;
-    margin: 40px auto;
+    margin: 80px;
     gap: 30px;
   }
 
