--- a/css/style_index.css
+++ b/css/style_index.css
@@ -62,3 +62,9 @@
   background-color: var(--celeste-claro);
 }
 
+#contadorCarrito {
+  font-size: 12px;
+  padding: 4px 6px;
+  background-color: #00AEEF;
+  color: white;
+}
