--- a/css/style_producto.css
+++ b/css/style_producto.css
@@ -5,6 +5,7 @@
   --verde-suave: #61c286;
 }
 
+
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
@@ -24,7 +25,7 @@ body {
   text-decoration: none;
   font-weight: bold;
   font-size: 18px;
-  color: var(--verde-suave);
+  color: var(--celeste-claro);
   margin-left: 100px;
 }
 
@@ -36,13 +37,15 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  padding: 20px 30px;
-  max-width: 800px;
-  margin: 30px auto 20px auto;
+  padding: 20px;
+  max-width: 600px;       
+  width: 100%;            
+  margin: 40px auto 20px auto;
   background: #fff;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   align-items: flex-start;
+  box-sizing: border-box;
 }
 
 .galeria {
@@ -120,6 +123,7 @@ body {
   color: white;
   border: none;
   border-radius: 10px;
+  background-color: var(--celeste);
 }
 
 .btn-cantidad:hover {
@@ -163,7 +167,6 @@ body {
   font-size: 14px;
 }
 
-/* BOTÓN VER CATÁLOGO */
 .boton-volver {
   margin-top: 20px;
 }
@@ -182,13 +185,62 @@ body {
 .btn-volver:hover {
   background-color: var(--celeste);
 }
+#iconoCarrito {
+  font-size: 16px;
+  color: var(--celeste);
+  margin-right: 6px; 
+}
+
+#contadorCarrito {
+  position: absolute;
+  top: -10px;    
+  right: -6px;   
+  background-color: var(--celeste);
+  color: white;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 4px 6px;
+  border-radius: 50%;
+  min-width: 20px;
+  height: 20px;
+  line-height: 12px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.buscador-wrapper {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto 20px auto;
+}
+
+.buscador {
+  flex: 1;
+  min-width: 200px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 10px 15px;
+  box-sizing: border-box;
+}
 
 /* RESPONSIVE */
 @media (max-width: 768px) {
+  .buscador-wrapper {
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0 15px;
+  }
+
+  .buscador {
+    width: 100%;
+    font-size: 15px;
+    margin-bottom: 10px;
+  }
+
   .detalle-container {
     flex-direction: column;
     padding: 20px;
-    margin: 80px;
+    margin: 20px auto;
     gap: 30px;
   }
 
