--- a/css/style_productos.css
+++ b/css/style_productos.css
@@ -1,9 +1,17 @@
+.buscador-wrapper {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto 20px auto;
+}
+
 .buscador {
-  width: 300%;
+  flex: 1;
+  min-width: 200px;
   font-size: 16px;
   border: 1px solid #ddd;
   border-radius: 8px;
-  margin-bottom: 20px;
+  padding: 10px 15px;
+  box-sizing: border-box;
 }
 
 .img-producto {
@@ -52,10 +60,53 @@
   align-items: center;
 }
 
+#footer {
+  background-color: white;
+  padding: 20px;
+  width: 100%;
+}
+
+#iconoCarrito {
+  font-size: 18px;
+  color: #00AEEF;
+  position: relative;
+}
+
+#contadorCarrito {
+  position: absolute;
+  top: -6px;
+  right: -6px;
+  background-color: #00AEEF;
+  color: white;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 4px 6px;
+  border-radius: 50%;
+  min-width: 20px;
+  height: 20px;
+  line-height: 12px;
+  text-align: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+}
+
+
 @media (max-width: 768px) {
+  .buscador-wrapper {
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0 15px;
+  }
+
+  .buscador {
+    width: 100%;
+    font-size: 15px;
+    margin-bottom: 10px;
+  }
+
   .detalle-container {
     flex-direction: column;
-    padding: 20px;
+    padding: 15px;
     margin: 0 auto;
     gap: 30px;
   }
@@ -85,4 +136,9 @@
     width: 100%;
     max-width: 280px;
   }
+  
+  #contadorCarrito {
+  top: -6px;
+  right: -6px;
+}
 }
