--- a/Frontend-React/css/style_carrucel.css
+++ b/Frontend-React/css/style_carrucel.css
@@ -8,6 +8,10 @@
   flex-direction: row; 
 }
 
+.carrucel-productos{
+  background-color:aliceblue;
+}
+
 .carrucel-items {
   display: flex;
   gap: 1rem;
