--- a/Frontend-React/src/css/style_navbar.css
+++ b/Frontend-React/src/css/style_navbar.css
@@ -2,11 +2,22 @@
   padding: 0.5rem 1rem;
 }
 
-.navbar-brand {
-  font-size: 1.1rem;
+.navbar.minimal {
+  padding: 0.25rem 1rem;
+  background-color: #ffffff;
+  border-bottom: 1px solid #ddd;
+  height: 80px; 
   display: flex;
   align-items: center;
-  margin-right: 1rem;
+}
+
+.navbar .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0;
+  height: 100%; 
 }
 
 .navbar-brand img {
